[project]
name = "radar-algorithm"
version = "0.1.0"
description = "some radar signal sorting algorithm"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.setuptools.package-data]
radar_algorithm = ["*.pyd", "*.so"]

[dependency-groups]
dev = [
    "nanobind>=2.5.0",
]
